clusters/proxmox-home/wakapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wakapi
  name: wakapi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: wakapi-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    -  wakapi.mgsds.com
    secretName: wakapi-ingress-tls
  rules:
  - host: wakapi.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wakapi
            port:
              number: 80
